Add enter names functions game broken to be continu....

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <div id="player2Dice" class="dice">-</div>
             </div>
         </div>
+        <button id="addPlayer1">Player 1</button>
+        <button id="addPlayer2">Player 2</button>
+        <input type="text" placeholder="Yor Name" id="input">
         <button id="rollBtn">Roll Dice 🎲</button>
         <button id="resetBtn">Reset Game 🔁</button>
     </div>
