--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <button id="addPlayer1">Player 1</button>
         <button id="addPlayer2">Player 2</button>
-        <input type="text" placeholder="Yor Name" id="input">
+        <input type="text" placeholder="Yor Name" id="inputEl">
         <button id="rollBtn">Roll Dice 🎲</button>
         <button id="resetBtn">Reset Game 🔁</button>
     </div>
