--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="message">Player 1 Turn</h1>
+        <h1 id="message">Player 1 enter your name</h1>
         <div class="players">
             <div id="player1">
                 <h1>Score: 
@@ -24,8 +24,8 @@
                 <div id="player2Dice" class="dice">-</div>
             </div>
         </div>
-        <button id="addPlayer1">Player 1</button>
-        <button id="addPlayer2">Player 2</button>
+        <button id="addPlayer1">Enter</button>
+        <button id="addPlayer2">Enter</button>
         <input type="text" placeholder="Yor Name" id="inputEl">
         <button id="rollBtn">Roll Dice 🎲</button>
         <button id="resetBtn">Reset Game 🔁</button>
