--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <input type="text" placeholder="Yor Name" id="inputEl">
         <button id="rollBtn">Roll Dice 🎲</button>
         <button id="resetBtn">Reset Game 🔁</button>
+        <audio src="/horse.mp3" id="myAudio"></audio>
     </div>
     <script src="js/script.js"></script>
 </body>
